[package]
name = "dynamic-linking-statistics"
version = "0.1.0"
authors = ["lle-bout"]
edition = "2018"

[dependencies]
# goblin = "0.0.21"
goblin = { default-features = false, features = ["std", "pe32", "pe64", "endian_fd"], git = "https://github.com/leo-lb/goblin/", branch = "iat-synthetic-imports" }

rusqlite = "0.17"
clap = "2"
sha2 = "0.8"
hex = "0.3"
rand = "0.6"
regex = "1"
lazy_static = "1"